# LSC2Text

./: .gitignore  PROJECT.md  PROYECTO.md  README.md  colab-setup.sh  main.py  pyproject.toml  setup.sh
scripts/: count_images_by_section_sign.py  filter_dataset.py  filter_lsc70w_dataset.py  generate_dataset_csv.py  infer.py  optimize_features.py  optimize_train.py  split_dataset.py  train.py
src/api/: __init__.py  api.py
src/api/templates/: base.html  error.html  result.html  upload.html
src/ml/: __init__.py  feature_extraction.py  preprocessing.py
src/ml/features/: __init__.py  feature_extraction.py
src/ml/optimization/: __init__.py  optimize.py
src/ml/training/: __init__.py  evaluate.py  train.py
tests/: test_dataset_splitting.py  test_feature_extraction.py  test_feature_optimization.py  test_filter_lsc70w_dataset.py  test_hyperparam_optimization.py  test_model_training.py  test_preprocessing.py
tests/integration/: test_api.py  test_infer.py  test_web_frontend.py
tests/unit/: test_dataset_splitting.py  test_feature_extraction.py  test_feature_optimization.py  test_filter_lsc70w_dataset.py  test_hyperparam_optimization.py  test_model_training.py  test_optimize_train.py
